--- a/readme
+++ b/readme
@@ -3,4 +3,5 @@ Backend: https://lifeloop-final-deplay.onrender.com
 Frontend: https://lifeloop-final-deplay.vercel.app/
 
 To fix:
-CORS error on profile page.
+CORS error on profile page, when run through above links.
+Locally working perfectly,
